[package]
name = "media-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
rtp-rs = { path = "../rtp-rs" }
bit-cursor = "0.1.1"
serde_json = { version = "1.0.117", features = ["preserve_order"] }
serde = { version = "1.0.203", features = ["derive"] }
hmac = { version = "0.12.1", features = ["std"] }
sha1 = { version = "0.10.6", features = ["asm"] }
aes = "0.8.4"
webrtc-srtp = { path = "../webrtc/srtp" }                           # "0.13.0"
tokio = { version = "1.38.0", features = ["full"] }
